fix lags on mobile

--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 html,
 body {
 	overflow-x: hidden;
+	height: 100%;
 }
 
 body {
 	position: relative;
-	height: 100vh;
+	height: 100%;
 	margin: 0;
 }
 
